<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDeadCode"
    tools:ignore="MissingConstraints"
    tools:context=".SetConfigActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="start"
            android:text="@string/draw_size" />

        <!-- 数字最大1行3桁 -->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="start"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/linearLayout"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/transparent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        android:id="@+id/ok_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>